# gearsx

./: .env  Cargo.toml
docker-compose/: README.md  docker-compose.yaml
docker-compose/data/pgadmin-servers/: servers.json
docker-compose/data/postgres-docker-entrypoint-initdb.d/: install.sh
docker-compose/scripts/: shell-postgres.sh
docker-compose/src/db/: schema.rs
docs/: components-001.puml  domain-erd.puml
migrations/2019-12-25-101055_add_updated_at_function/: down.sql  up.sql
migrations/2019-12-27-091508_create_projects/: up.sql
migrations/2019-12-27-094707_create_documents/: up.sql
migrations/2020-01-24-104547_add_model_ref_to_project/: down.sql  up.sql
resource/docs/domain/good/: basic.json
resource/projects/basic/: modelx.json
src/: cli.yml  lib.rs  main.rs
src/db/: connection.rs  mod.rs  models.rs  schema.rs
src/graphql/: context.rs  handler.rs  mod.rs  mutation.rs  query.rs  schema.rs
src/messages/: common.rs  mod.rs
src/structure/: common.rs  data.rs  domain.rs  fngroup.rs  mod.rs  modelx.rs  xflow.rs
src/util/: fs.rs  naming.rs
tests/: test_structure_domain.rs  test_util_fs.rs
