[package]
name = "gearsx"
version = "0.1.0"
authors = ["Michiel Kalkman <michiel@nosuchtype.com>"]
edition = "2018"

[lib]
name = "gearsx"

[dependencies]
clap = {version = "2.31", features = ["yaml"]}
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "serde_json", "r2d2", "chrono"] }
dotenv = "0.15.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
juniper = "0.14.2"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
serde_tuple = "0.4.0"
chrono =  { version = "0.4", features = ["serde"] }

juniper_warp = "0.5.2"
warp = "0.1.8"

futures = "0.3.3"
log = "0.4"
env_logger = "0.7.1"
glob = "0.3"

r2d2 = "0.8"

[dev-dependencies]
tempdir =  "0.3"

# [replace]
# "juniper:0.14.2" = { git = 'https://github.com/graphql-rust/juniper' }